Enable preview features by default