@@ -84,10 +84,12 @@ public class Bach {
     var java = new ArrayList<String>();
     java.add(Path.of(System.getProperty("java.home"), "bin", "java").toString());
     if (DEBUG) java.add("-Debug");
+    java.add("--enable-preview");
     java.add("-D" + "user.language=en");
     java.add("--module-path=" + LIB);
     java.add("--add-modules=" + "ALL-SYSTEM");
     if (isRegularFile(BUILD)) {
+      java.add("--source=" + Runtime.version().feature());
       java.add("--add-modules=de.sormuras.bach");
       java.add(BUILD.toString());
     } else {
